getTodos(GET), updateTodo(PUT), deleteTodo(DELETE) modified